--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -312,6 +312,12 @@
         }
     }
 }
+.single-programmer {
+    .description {
+        padding-left: 0;
+    }
+}
+
 
 strong, p strong {
     color: white !important;
