--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,374 +1,1 @@
-/* line 1, ../scss/syntax.scss */
-.highlight {
-  background: #ffffff;
-}
-
-/* line 2, ../scss/syntax.scss */
-.highlight .c {
-  color: #999988;
-  font-style: italic;
-}
-
-/* Comment */
-/* line 3, ../scss/syntax.scss */
-.highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
-}
-
-/* Error */
-/* line 4, ../scss/syntax.scss */
-.highlight .k {
-  font-weight: bold;
-}
-
-/* Keyword */
-/* line 5, ../scss/syntax.scss */
-.highlight .o {
-  font-weight: bold;
-}
-
-/* Operator */
-/* line 6, ../scss/syntax.scss */
-.highlight .cm {
-  color: #999988;
-  font-style: italic;
-}
-
-/* Comment.Multiline */
-/* line 7, ../scss/syntax.scss */
-.highlight .cp {
-  color: #999999;
-  font-weight: bold;
-}
-
-/* Comment.Preproc */
-/* line 8, ../scss/syntax.scss */
-.highlight .c1 {
-  color: #999988;
-  font-style: italic;
-}
-
-/* Comment.Single */
-/* line 9, ../scss/syntax.scss */
-.highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
-}
-
-/* Comment.Special */
-/* line 10, ../scss/syntax.scss */
-.highlight .gd {
-  color: #000000;
-  background-color: #ffdddd;
-}
-
-/* Generic.Deleted */
-/* line 11, ../scss/syntax.scss */
-.highlight .gd .x {
-  color: #000000;
-  background-color: #ffaaaa;
-}
-
-/* Generic.Deleted.Specific */
-/* line 12, ../scss/syntax.scss */
-.highlight .ge {
-  font-style: italic;
-}
-
-/* Generic.Emph */
-/* line 13, ../scss/syntax.scss */
-.highlight .gr {
-  color: #aa0000;
-}
-
-/* Generic.Error */
-/* line 14, ../scss/syntax.scss */
-.highlight .gh {
-  color: #999999;
-}
-
-/* Generic.Heading */
-/* line 15, ../scss/syntax.scss */
-.highlight .gi {
-  color: #000000;
-  background-color: #ddffdd;
-}
-
-/* Generic.Inserted */
-/* line 16, ../scss/syntax.scss */
-.highlight .gi .x {
-  color: #000000;
-  background-color: #aaffaa;
-}
-
-/* Generic.Inserted.Specific */
-/* line 17, ../scss/syntax.scss */
-.highlight .go {
-  color: #888888;
-}
-
-/* Generic.Output */
-/* line 18, ../scss/syntax.scss */
-.highlight .gp {
-  color: #555555;
-}
-
-/* Generic.Prompt */
-/* line 19, ../scss/syntax.scss */
-.highlight .gs {
-  font-weight: bold;
-}
-
-/* Generic.Strong */
-/* line 20, ../scss/syntax.scss */
-.highlight .gu {
-  color: #aaaaaa;
-}
-
-/* Generic.Subheading */
-/* line 21, ../scss/syntax.scss */
-.highlight .gt {
-  color: #aa0000;
-}
-
-/* Generic.Traceback */
-/* line 22, ../scss/syntax.scss */
-.highlight .kc {
-  font-weight: bold;
-}
-
-/* Keyword.Constant */
-/* line 23, ../scss/syntax.scss */
-.highlight .kd {
-  font-weight: bold;
-}
-
-/* Keyword.Declaration */
-/* line 24, ../scss/syntax.scss */
-.highlight .kp {
-  font-weight: bold;
-}
-
-/* Keyword.Pseudo */
-/* line 25, ../scss/syntax.scss */
-.highlight .kr {
-  font-weight: bold;
-}
-
-/* Keyword.Reserved */
-/* line 26, ../scss/syntax.scss */
-.highlight .kt {
-  color: #445588;
-  font-weight: bold;
-}
-
-/* Keyword.Type */
-/* line 27, ../scss/syntax.scss */
-.highlight .m {
-  color: #009999;
-}
-
-/* Literal.Number */
-/* line 28, ../scss/syntax.scss */
-.highlight .s {
-  color: #dd1144;
-}
-
-/* Literal.String */
-/* line 29, ../scss/syntax.scss */
-.highlight .na {
-  color: teal;
-}
-
-/* Name.Attribute */
-/* line 30, ../scss/syntax.scss */
-.highlight .nb {
-  color: #0086b3;
-}
-
-/* Name.Builtin */
-/* line 31, ../scss/syntax.scss */
-.highlight .nc {
-  color: #445588;
-  font-weight: bold;
-}
-
-/* Name.Class */
-/* line 32, ../scss/syntax.scss */
-.highlight .no {
-  color: teal;
-}
-
-/* Name.Constant */
-/* line 33, ../scss/syntax.scss */
-.highlight .ni {
-  color: purple;
-}
-
-/* Name.Entity */
-/* line 34, ../scss/syntax.scss */
-.highlight .ne {
-  color: #990000;
-  font-weight: bold;
-}
-
-/* Name.Exception */
-/* line 35, ../scss/syntax.scss */
-.highlight .nf {
-  color: #990000;
-  font-weight: bold;
-}
-
-/* Name.Function */
-/* line 36, ../scss/syntax.scss */
-.highlight .nn {
-  color: #555555;
-}
-
-/* Name.Namespace */
-/* line 37, ../scss/syntax.scss */
-.highlight .nt {
-  color: navy;
-}
-
-/* Name.Tag */
-/* line 38, ../scss/syntax.scss */
-.highlight .nv {
-  color: teal;
-}
-
-/* Name.Variable */
-/* line 39, ../scss/syntax.scss */
-.highlight .ow {
-  font-weight: bold;
-}
-
-/* Operator.Word */
-/* line 40, ../scss/syntax.scss */
-.highlight .w {
-  color: #bbbbbb;
-}
-
-/* Text.Whitespace */
-/* line 41, ../scss/syntax.scss */
-.highlight .mf {
-  color: #009999;
-}
-
-/* Literal.Number.Float */
-/* line 42, ../scss/syntax.scss */
-.highlight .mh {
-  color: #009999;
-}
-
-/* Literal.Number.Hex */
-/* line 43, ../scss/syntax.scss */
-.highlight .mi {
-  color: #009999;
-}
-
-/* Literal.Number.Integer */
-/* line 44, ../scss/syntax.scss */
-.highlight .mo {
-  color: #009999;
-}
-
-/* Literal.Number.Oct */
-/* line 45, ../scss/syntax.scss */
-.highlight .sb {
-  color: #dd1144;
-}
-
-/* Literal.String.Backtick */
-/* line 46, ../scss/syntax.scss */
-.highlight .sc {
-  color: #dd1144;
-}
-
-/* Literal.String.Char */
-/* line 47, ../scss/syntax.scss */
-.highlight .sd {
-  color: #dd1144;
-}
-
-/* Literal.String.Doc */
-/* line 48, ../scss/syntax.scss */
-.highlight .s2 {
-  color: #dd1144;
-}
-
-/* Literal.String.Double */
-/* line 49, ../scss/syntax.scss */
-.highlight .se {
-  color: #dd1144;
-}
-
-/* Literal.String.Escape */
-/* line 50, ../scss/syntax.scss */
-.highlight .sh {
-  color: #dd1144;
-}
-
-/* Literal.String.Heredoc */
-/* line 51, ../scss/syntax.scss */
-.highlight .si {
-  color: #dd1144;
-}
-
-/* Literal.String.Interpol */
-/* line 52, ../scss/syntax.scss */
-.highlight .sx {
-  color: #dd1144;
-}
-
-/* Literal.String.Other */
-/* line 53, ../scss/syntax.scss */
-.highlight .sr {
-  color: #009926;
-}
-
-/* Literal.String.Regex */
-/* line 54, ../scss/syntax.scss */
-.highlight .s1 {
-  color: #dd1144;
-}
-
-/* Literal.String.Single */
-/* line 55, ../scss/syntax.scss */
-.highlight .ss {
-  color: #990073;
-}
-
-/* Literal.String.Symbol */
-/* line 56, ../scss/syntax.scss */
-.highlight .bp {
-  color: #999999;
-}
-
-/* Name.Builtin.Pseudo */
-/* line 57, ../scss/syntax.scss */
-.highlight .vc {
-  color: teal;
-}
-
-/* Name.Variable.Class */
-/* line 58, ../scss/syntax.scss */
-.highlight .vg {
-  color: teal;
-}
-
-/* Name.Variable.Global */
-/* line 59, ../scss/syntax.scss */
-.highlight .vi {
-  color: teal;
-}
-
-/* Name.Variable.Instance */
-/* line 60, ../scss/syntax.scss */
-.highlight .il {
-  color: #009999;
-}
-
-/* Literal.Number.Integer.Long */
+.highlight{background:#ffffff}.highlight .c{color:#999988;font-style:italic}.highlight .err{color:#a61717;background-color:#e3d2d2}.highlight .k{font-weight:bold}.highlight .o{font-weight:bold}.highlight .cm{color:#999988;font-style:italic}.highlight .cp{color:#999999;font-weight:bold}.highlight .c1{color:#999988;font-style:italic}.highlight .cs{color:#999999;font-weight:bold;font-style:italic}.highlight .gd{color:#000000;background-color:#fdd}.highlight .gd .x{color:#000000;background-color:#faa}.highlight .ge{font-style:italic}.highlight .gr{color:#a00}.highlight .gh{color:#999}.highlight .gi{color:#000000;background-color:#dfd}.highlight .gi .x{color:#000000;background-color:#afa}.highlight .go{color:#888}.highlight .gp{color:#555}.highlight .gs{font-weight:bold}.highlight .gu{color:#aaa}.highlight .gt{color:#a00}.highlight .kc{font-weight:bold}.highlight .kd{font-weight:bold}.highlight .kp{font-weight:bold}.highlight .kr{font-weight:bold}.highlight .kt{color:#445588;font-weight:bold}.highlight .m{color:#099}.highlight .s{color:#d14}.highlight .na{color:teal}.highlight .nb{color:#0086b3}.highlight .nc{color:#445588;font-weight:bold}.highlight .no{color:teal}.highlight .ni{color:purple}.highlight .ne{color:#990000;font-weight:bold}.highlight .nf{color:#990000;font-weight:bold}.highlight .nn{color:#555}.highlight .nt{color:navy}.highlight .nv{color:teal}.highlight .ow{font-weight:bold}.highlight .w{color:#bbb}.highlight .mf{color:#099}.highlight .mh{color:#099}.highlight .mi{color:#099}.highlight .mo{color:#099}.highlight .sb{color:#d14}.highlight .sc{color:#d14}.highlight .sd{color:#d14}.highlight .s2{color:#d14}.highlight .se{color:#d14}.highlight .sh{color:#d14}.highlight .si{color:#d14}.highlight .sx{color:#d14}.highlight .sr{color:#009926}.highlight .s1{color:#d14}.highlight .ss{color:#990073}.highlight .bp{color:#999}.highlight .vc{color:teal}.highlight .vg{color:teal}.highlight .vi{color:teal}.highlight .il{color:#099}
