changed 'view templates' to 'view project', added top margin to .single-developer .credits

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -297,6 +297,10 @@
         padding-left: 10px;
     }
 }
+.single-developer .credits {
+    margin-top: 20px;
+}
+
 .description{
     margin-bottom: 10px;
 
