added space above credits for non-responsive developer projects

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -297,7 +297,7 @@
         padding-left: 10px;
     }
 }
-.single-developer .credits {
+.single-developer #col-credits-media .credits {
     margin-top: 20px;
 }
 
