margin-top added to col-credits-media

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -297,8 +297,11 @@
         padding-left: 10px;
     }
 }
-.single-developer #col-credits-media .credits {
-    margin-top: 20px;
+.single-developer #col-credits-media {
+    margin-top: -4px;
+    .credits {
+        margin-top: 20px;
+    }
 }
 
 .description{
