adjusted line-height for global & p

--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -298,7 +298,11 @@
     }
 }
 .single-developer #col-credits-media {
-    margin-top: -4px;
+    
+    @include min_tablet {
+        margin-top: -4px;
+    }
+
     .credits {
         margin-top: 20px;
     }
