--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -305,6 +305,13 @@
 
     .credits {
         margin-top: 30px;
+
+        @include max_laptop {
+            margin-top: 20px;            
+        }
+        @include max_tablet {
+            margin-top: 15px;            
+        }
     }
 }
 
