addressed some color issues, made 'edit post link' its own php file and re-added to the appropriate places in each content php file.

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -45,7 +45,7 @@
         h2 {
             font-family: "Dosis", sans-serif !important;
             font-size: 110%;
-            color: white;
+            color: $white;
             margin-bottom: 20px;
             letter-spacing: 3px;
         }
