--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -22,11 +22,13 @@ $pad-md: 15px;
 /* Colors */
 $red:       #b12e4f;//#d2322d;
 $blue:      #bf7485;//#0074a2;
+$navy: 		#268bd2;
 $info: 		#555;
 $cyan:      #2ea2cc;
 $green:     #5cb85c;
 $yellow:    #f0ad4e;
 $rust: 		#F3BA64;
+$white: 	#fafafa;
 
 $vm_blue:   #428bca;
 $vm_yellow: #f7b42c;
