--- a/assets/scss/_thumbs.scss
+++ b/assets/scss/_thumbs.scss
@@ -72,7 +72,7 @@ $thumb_hover:   $red;
         }
         h3 {
             background: $thumb_hover;
-            color: white;
+            color: $white;
             padding-top: 20px;
             @include transition (background-color, 0.2s);
             @include transition (padding, 0.2s);
