--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -57,7 +57,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: "Raleway Dots", sans-serif;
     text-transform: uppercase;
-    color: white;
+    color: $white;
     margin-top: 0;
     span{
         color: #ccc;
