--- a/assets/scss/_wp-plugins.scss
+++ b/assets/scss/_wp-plugins.scss
@@ -65,7 +65,7 @@
     .btn {
         border: $red;
         background-color: $red;
-        color: white;
+        color: $white;
         @include transition(background-color, 0.25s);
         &:hover {
             background-color: $blue;
@@ -126,7 +126,7 @@
     padding: 10px;
     margin-top: 0 !important;
     border: 0;
-    color: white;
+    color: $white;
     @include border-radius(2px);
     @include transition(background-color, 0.25s);
     &:hover {
